@@ -9,6 +9,8 @@ cdbs (0.4.52) UNRELEASED; urgency=low
   * Fixed/updated doc-base section
   * Added DEB_AUTOMAKE_ARGS variable (autotools-files.mk) (closes: #439747)
   * Added dh_icons call to GNOME class (gnome.mk) (closes: #432851)
+  * Added standard patch system targets "patch" and "unpatch"
+    (dpatch.mk, simple-patchsys.mk) (closes: #466259)
 
  -- Peter Eisentraut <petere@debian.org>  Fri, 28 Mar 2008 14:53:30 +0100
 
